[gd_scene load_steps=3 format=3 uid="uid://fycl6xlfw8r5"]

[ext_resource type="PackedScene" uid="uid://58ryyxbn0dby" path="res://addons/agent/ui/plan/plan_item.tscn" id="1_8cy4d"]
[ext_resource type="Script" uid="uid://dismjo4ye3i3w" path="res://addons/agent/ui/plan/plan_list.gd" id="1_lbtd4"]

[node name="PlanList" type="MarginContainer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lbtd4")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="ExpandButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_default_cursor_shape = 2
flat = true
alignment = 0

[node name="PlanItemContainer" type="VBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="PlanItem" parent="VBoxContainer/PlanItemContainer" instance=ExtResource("1_8cy4d")]
layout_mode = 2
